# riff-wave-reader

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: error.rs  lib.rs
